se agrega cambios para migración ef

--- a/Ecommerce/appsettings.json
+++ b/Ecommerce/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "REPLACE_IN_appsettings.Development.json",
+    "Issuer": "EcommerceExampleByEduardo",
+    "Audience": "EcommerceExampleByEduardo",
+    "ExpirationInMinutes": 1440
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "REPLACE_IN_appsettings.Development.json"
+  }
 }
