Se agregan dtos

--- a/Ecommerce/appsettings.Development.json
+++ b/Ecommerce/appsettings.Development.json
@@ -2,7 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPEDDU\\SQLEXPRESS;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "SecretKey": "key-secret-for-example-by-eduardo"
   }
 }
